Wed May  9 14:02:02 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/monitor.cpp:

          Use unsigned ints to eliminated signed/unsigned mismatch warnings.

Wed May  9 13:48:26 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * docs/INSTALL:

          Added some information on supported platforms and building DDS.

Tue May 08 23:41:25 UTC 2007  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/DCPS/SimpleLatency/PubListener.cpp:
        * performance-tests/DCPS/SimpleLatency/PubListener.h:
        * performance-tests/DCPS/SimpleLatency/sample_pub.cpp:
        * performance-tests/DCPS/SimpleLatency/sample_sub.cpp:
        * performance-tests/DCPS/SimpleLatency/SubListener.cpp:
        * performance-tests/DCPS/SimpleLatency/SubListener.h:
        * performance-tests/DCPS/TCPProfilingTest/common.h:
        * performance-tests/DCPS/TCPProfilingTest/DataReaderListener.cpp:
        * performance-tests/DCPS/TCPProfilingTest/DataReaderListener.h:
        * performance-tests/DCPS/TCPProfilingTest/subscriber.cpp:

          Added option to use Zero copy read.

        * performance-tests/DCPS/TCPProfilingTest/run_test-1p1s.pl:
        * performance-tests/DCPS/TCPProfilingTest/run_test-1p4s.pl:
        * performance-tests/DCPS/TCPProfilingTest/run_test-2p3s.pl:
        * performance-tests/DCPS/TCPProfilingTest/run_test-4p1s.pl:

          Changed to disable Built In Topic usage.

Tue May  8 19:12:09 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/WriteDataContainer.h:
        * dds/DCPS/WriteDataContainer.cpp:

          Removed ACE_THROW_SPEC(()) clauses from functions that aren't
          overrides of skeleton functions.  ACE_THROW_SPEC is not necessary and
          causes problems on platforms that check exceptions against the
          throw() clause.  In this case, we saw test failures because